--- a/example/path/to/benchmark/chart.json.erb
+++ b/example/path/to/benchmark/chart.json.erb
@@ -16,7 +16,7 @@
         # will be replaced in the resulting JSON file. In this case, the result
         # of this Ruby code will be an array containing the compile-times for
         # compiling the `std_tuple.cpp` file with different values of `n`.
-        Metabench::compile_time("std_tuple.cpp", (0...50).step(5),
+        Metabench::compile_time("std_tuple.cpp.erb", (0...50).step(5),
             env: {variable: "foo"}
         )
       %>
@@ -24,7 +24,7 @@
     {
       key: 'recursive tuple',
       values: <%=
-        Metabench.compile_time('recursive_tuple.cpp', (0...50).step(5))
+        Metabench.compile_time('recursive_tuple.cpp.erb', (0...50).step(5))
       %>
     }
   ]
