--- a/example/make_tuple/chart.json.erb
+++ b/example/make_tuple/chart.json.erb
@@ -12,13 +12,7 @@
     {
       key: 'std::tuple',
       values: <%=
-        # Here, you can write arbitrary Ruby code. The result of this Ruby code
-        # will be replaced in the resulting JSON file. In this case, the result
-        # of this Ruby code will be an array containing the compile-times for
-        # compiling the `std_tuple.cpp` file with different values of `n`.
-        Metabench::compile_time("std_tuple.cpp.erb", (0...50).step(5),
-            env: {variable: "foo"}
-        )
+        Metabench::compile_time("std_tuple.cpp.erb", (0...50).step(5))
       %>
     },
     {
