--- a/example/decay/std_decay.cpp.erb
+++ b/example/decay/std_decay.cpp.erb
@@ -1,13 +1,14 @@
 #include <type_traits>
+using std::decay;
 
 <% (0..n).each do |i| %>
     struct T<%= i %> { };
-    using foo1_<%= i %> = std::decay<T<%= i %>>::type;
-    using foo2_<%= i %> = std::decay<T<%= i %>&>::type;
-    using foo3_<%= i %> = std::decay<T<%= i %>&&>::type;
-    using foo4_<%= i %> = std::decay<T<%= i %> const>::type;
-    using foo5_<%= i %> = std::decay<T<%= i %> volatile>::type;
-    using foo6_<%= i %> = std::decay<T<%= i %> [3]>::type;
+    typedef decay<T<%= i %>>::type             foo1_<%= i %>;
+    typedef decay<T<%= i %>&>::type            foo2_<%= i %>;
+    typedef decay<T<%= i %>&&>::type           foo3_<%= i %>;
+    typedef decay<T<%= i %> const>::type       foo4_<%= i %>;
+    typedef decay<T<%= i %> volatile>::type    foo5_<%= i %>;
+    typedef decay<T<%= i %> [3]>::type         foo6_<%= i %>;
 <% end %>
 
 int main() { }
