--- a/benchmark/type/at/brigand.list.cpp.erb
+++ b/benchmark/type/at/brigand.list.cpp.erb
@@ -2,8 +2,9 @@
 // Distributed under the Boost Software License, Version 1.0.
 // (See accompanying file LICENSE.md or copy at http://boost.org/LICENSE_1_0.txt)
 
-#include <brigand/at.hpp>
-#include <brigand/list.hpp>
+#include <brigand/sequences/at.hpp>
+#include <brigand/sequences/list.hpp>
+#include <type_traits>
 
 
 template <int>
@@ -13,7 +14,7 @@ using list = brigand::list<
     <%= (1..n).map { |i| "x<#{i}>" }.join(', ') %>
 >;
 
-using result = brigand::at_c<<%= n - 1 %>, list>::type;
+using result = brigand::at<list, std::integral_constant<int, <%= n - 1 %>>>;
 
 
 int main() { }
