--- a/benchmark/type/at/mpl.vector.cpp.erb
+++ b/benchmark/type/at/mpl.vector.cpp.erb
@@ -2,6 +2,9 @@
 // Distributed under the Boost Software License, Version 1.0.
 // (See accompanying file LICENSE.md or copy at http://boost.org/LICENSE_1_0.txt)
 
+<%= n > 20 ? "#define BOOST_MPL_CFG_NO_PREPROCESSED_HEADERS" : ''%>
+<%= n > 20 ? "#define BOOST_MPL_LIMIT_VECTOR_SIZE #{(n/10.0).ceil * 10}" : ''%>
+
 #include <boost/mpl/at.hpp>
 #include <boost/mpl/vector.hpp>
 namespace mpl = boost::mpl;
