--- a/benchmark/type/transform/mpl.list.cpp.erb
+++ b/benchmark/type/transform/mpl.list.cpp.erb
@@ -2,6 +2,9 @@
 // Distributed under the Boost Software License, Version 1.0.
 // (See accompanying file LICENSE.md or copy at http://boost.org/LICENSE_1_0.txt)
 
+<%= n > 20 ? "#define BOOST_MPL_CFG_NO_PREPROCESSED_HEADERS" : ''%>
+<%= n > 20 ? "#define BOOST_MPL_LIMIT_LIST_SIZE #{(n/10.0).ceil * 10}" : ''%>
+
 #include <boost/mpl/list.hpp>
 #include <boost/mpl/quote.hpp>
 #include <boost/mpl/transform.hpp>
