add a download button

--- a/benchmark/index.html.erb
+++ b/benchmark/index.html.erb
@@ -74,6 +74,13 @@
         </ul>
         <ul class="nav navbar-nav navbar-right">
           <li>
+            <a id="download" aria-label="Download from GitHub" href="https://github.com/ldionne/metabench/archive/master.zip">
+              <span class="hidden-xs">Download</span>
+              <span class="hidden-xs octicon octicon-cloud-download" aria-hidden="true"></span>
+              <span class="visible-xs-block mega-octicon octicon-cloud-download" aria-hidden="true"></span>
+            </a>
+          </li>
+          <li>
             <a aria-label="View on GitHub" href="https://github.com/ldionne/metabench">
               <span class="hidden-xs">View on GitHub</span>
               <span class="hidden-xs octicon octicon-mark-github" aria-hidden="true"></span>
