make sure the benchmark suite compiles under C++98
fix ldionne/metabench#89

--- a/benchmark/hetero/at/fusion.list.cpp.erb
+++ b/benchmark/hetero/at/fusion.list.cpp.erb
@@ -15,9 +15,9 @@ template <int>
 struct x { };
 
 int main() {
-    auto list = fusion::make_list(
-        <%= (1..n).map { |n| "x<#{n}>{}" }.join(', ') %>
+    (void)fusion::at_c<<%= n - 1 %>>(
+        fusion::make_list(
+            <%= (1..n).map { |n| "x<#{n}>()" }.join(', ') %>
+        )
     );
-    auto result = fusion::at_c<<%= n - 1 %>>(list);
-    (void)result;
 }
