--- a/benchmark/hetero/at/fusion.vector.cpp.erb
+++ b/benchmark/hetero/at/fusion.vector.cpp.erb
@@ -15,9 +15,9 @@ template <int>
 struct x { };
 
 int main() {
-    auto vector = fusion::make_vector(
-        <%= (1..n).map { |n| "x<#{n}>{}" }.join(', ') %>
+    (void)fusion::at_c<<%= n - 1 %>>(
+        fusion::make_vector(
+            <%= (1..n).map { |n| "x<#{n}>()" }.join(', ') %>
+        )
     );
-    auto result = fusion::at_c<<%= n - 1 %>>(vector);
-    (void)result;
 }
