--- a/benchmark/hetero/make/fusion.vector.cpp.erb
+++ b/benchmark/hetero/make/fusion.vector.cpp.erb
@@ -2,6 +2,10 @@
 // Distributed under the Boost Software License, Version 1.0.
 // (See accompanying file LICENSE.md or copy at http://boost.org/LICENSE_1_0.txt)
 
+<% if n > 10 %>
+    #define FUSION_MAX_VECTOR_SIZE <%= ((n + 9) / 10) * 10 %>
+<% end %>
+
 #include <boost/fusion/include/make_vector.hpp>
 namespace fusion = boost::fusion;
 
@@ -10,8 +14,7 @@ template <int i>
 struct x { };
 
 int main() {
-    auto xs = fusion::make_vector(
-        <%= (0..n).map { |i| "x<#{i}>{}" }.join(', ') %>
+    (void)fusion::make_vector(
+        <%= (1..n).map { |i| "x<#{i}>()" }.join(', ') %>
     );
-    (void)xs;
 }
