--- a/benchmark/hetero/transform/fusion.list.cpp.erb
+++ b/benchmark/hetero/transform/fusion.list.cpp.erb
@@ -13,18 +13,23 @@ namespace fusion = boost::fusion;
 
 
 struct f {
+    template <typename> struct result;
+    template <typename F, typename X> struct result<F(X)> { typedef X type; };
+
     template <typename X>
-    constexpr X operator()(X x) const { return x; }
+    BOOST_CONSTEXPR X operator()(X x) const { return x; }
 };
 
 template <int i>
 struct x { };
 
 int main() {
-    auto xs = fusion::make_list(
-        <%= (1..n).map { |i| "x<#{i}>{}" }.join(', ') %>
+    (void)fusion::as_list(
+        fusion::transform(
+            fusion::make_list(
+                <%= (1..n).map { |n| "x<#{n}>()" }.join(', ') %>
+            ),
+            f()
+        )
     );
-
-    auto result = fusion::as_list(fusion::transform(xs, f{}));
-    (void)result;
 }
