--- a/example/decay/my_decay.cpp.erb
+++ b/example/decay/my_decay.cpp.erb
@@ -18,6 +18,7 @@ template <typename T, typename R, typename ...A>
 struct decay<T, R(A..., ...)> { typedef R(*type)(A..., ...); };
 
 
+#if defined(METABENCH)
 <% (0..n).each do |i| %>
     struct T<%= i %> { };
     typedef decay<T<%= i %>>::type             foo1_<%= i %>;
@@ -27,5 +28,6 @@ struct decay<T, R(A..., ...)> { typedef R(*type)(A..., ...); };
     typedef decay<T<%= i %> volatile>::type    foo5_<%= i %>;
     typedef decay<T<%= i %> [3]>::type         foo6_<%= i %>;
 <% end %>
+#endif
 
 int main() { }
