--- a/benchmark/hetero/make/hana.tuple.cpp.erb
+++ b/benchmark/hetero/make/hana.tuple.cpp.erb
@@ -9,8 +9,9 @@ template <int i>
 struct x { };
 
 int main() {
+#if defined(METABENCH)
     constexpr auto xs = hana::make_tuple(
         <%= (1..n).map { |i| "x<#{i}>{}" }.join(', ') %>
     );
-    (void)xs;
+#endif
 }
