--- a/benchmark/hetero/transform/hana.basic_tuple.cpp.erb
+++ b/benchmark/hetero/transform/hana.basic_tuple.cpp.erb
@@ -19,6 +19,8 @@ int main() {
     constexpr auto xs = hana::make_basic_tuple(
         <%= (1..n).map { |i| "x<#{i}>{}" }.join(', ') %>
     );
+
+#if defined(METABENCH)
     constexpr auto result = hana::transform(xs, f{});
-    (void)result;
+#endif
 }
