--- a/benchmark/type/at/brigand.list.cpp.erb
+++ b/benchmark/type/at/brigand.list.cpp.erb
@@ -14,7 +14,8 @@ using list = brigand::list<
     <%= (1..n).map { |i| "x<#{i}>" }.join(', ') %>
 >;
 
+#if defined(METABENCH)
 using result = brigand::at<list, std::integral_constant<int, <%= n - 1 %>>>;
-
+#endif
 
 int main() { }
