--- a/benchmark/type/filter/mpl.list.cpp.erb
+++ b/benchmark/type/filter/mpl.list.cpp.erb
@@ -23,7 +23,9 @@ using list = mpl::list<
     <%= (1..n).map { |i| "std::integral_constant<int, #{i}>" }.join(', ') %>
 >;
 
+#if defined(METABENCH)
 using result = mpl::copy_if<list, is_even>::type;
+#endif
 
 
 int main() { }
