--- a/benchmark/type/find_if/brigand.list.cpp.erb
+++ b/benchmark/type/find_if/brigand.list.cpp.erb
@@ -17,6 +17,8 @@ using list = brigand::list<
     <%= (1..n).map { |i| "brigand::int32_t<#{i}>" }.join(', ') %>
 >;
 
+#if defined(METABENCH)
 using result = brigand::find<list, is_last>;
+#endif
 
 int main() { }
