--- a/benchmark/type/fold_left/brigand.list.cpp.erb
+++ b/benchmark/type/fold_left/brigand.list.cpp.erb
@@ -23,6 +23,8 @@ using list = brigand::list<
     <%= (1..n).map { |i| "x<#{i}>" }.join(', ') %>
 >;
 
+#if defined(METABENCH)
 using result = brigand::fold<list, state, f>;
+#endif
 
 int main() { }
