--- a/benchmark/type/fold_right/metal.list.cpp.erb
+++ b/benchmark/type/fold_right/metal.list.cpp.erb
@@ -22,8 +22,10 @@ using list = metal::list<
     <%= (1..n).map { |i| "x<#{i}>" }.join(', ') %>
 >;
 
+#if defined(METABENCH)
 using result = metal::fold_t<
     list, state, metal::lambda<f>, metal::integer<<%= n %>>, metal::integer<0>
 >;
+#endif
 
 int main() { }
