--- a/benchmark/type/transform/brigand.list.cpp.erb
+++ b/benchmark/type/transform/brigand.list.cpp.erb
@@ -20,6 +20,8 @@ using xs = brigand::list<
     <%= (1..n).map { |i| "x<#{i}>" }.join(', ') %>
 >;
 
+#if defined(METABENCH)
 using result = brigand::transform<xs, f>;
+#endif
 
 int main() { }
