--- a/benchmark/hetero/count_if/fusion.list.cpp.erb
+++ b/benchmark/hetero/count_if/fusion.list.cpp.erb
@@ -24,6 +24,8 @@ int main() {
     auto ints = fusion::make_list(
         <%= (1..n).map { |i| "std::integral_constant<int, #{i}>{}" }.join(', ') %>
     );
+
+#if defined(METABENCH)
     auto result = fusion::count_if(ints, is_even{});
-    (void)result;
+#endif
 }
