--- a/benchmark/hetero/count_if/hana.tuple.cpp.erb
+++ b/benchmark/hetero/count_if/hana.tuple.cpp.erb
@@ -20,6 +20,8 @@ int main() {
     auto ints = hana::make_tuple(
         <%= (1..n).map { |i| "std::integral_constant<int, #{i}>{}" }.join(', ') %>
     );
+
+#if defined(METABENCH)
     auto result = hana::count_if(ints, is_even{});
-    (void)result;
+#endif
 }
