--- a/benchmark/hetero/difference/hana.set.cpp.erb
+++ b/benchmark/hetero/difference/hana.set.cpp.erb
@@ -17,6 +17,7 @@ int main() {
         <%= (1..(n/2)).map { |i| "hana::int_c<#{i}>" }.join(', ') %>
     );
 
+#if defined(METABENCH)
     constexpr auto result = hana::difference(xs, ys);
-    (void)result;
+#endif
 }
