--- a/benchmark/hetero/filter/fusion.vector.cpp.erb
+++ b/benchmark/hetero/filter/fusion.vector.cpp.erb
@@ -24,6 +24,7 @@ int main() {
         <%= (1..n).map { |i| "std::integral_constant<int, #{i}>{}" }.join(', ') %>
     );
 
+#if defined(METABENCH)
     auto result = fusion::as_vector(fusion::filter_if<is_even>(xs));
-    (void)result;
+#endif
 }
