--- a/benchmark/type/at/metal.list.cpp.erb
+++ b/benchmark/type/at/metal.list.cpp.erb
@@ -14,7 +14,8 @@ using list = metal::list<
     <%= (1..n).map { |i| "x<#{i}>" }.join(', ') %>
 >;
 
+#if defined(METABENCH)
 using result = metal::at_t<list, metal::number<int, <%= n - 1 %>>>;
-
+#endif
 
 int main() { }
