--- a/benchmark/type/at/mpl.list.cpp.erb
+++ b/benchmark/type/at/mpl.list.cpp.erb
@@ -15,10 +15,10 @@ namespace mpl = boost::mpl;
 template <int>
 struct x;
 
-typedef mpl::at_c<
-    mpl::list<<%= (1..n).map { |i| "x<#{i}>" }.join(', ') %> >,
-    <%= n - 1 %>
->::type result;
+using xs = mpl::list<<%= (1..n).map { |i| "x<#{i}>" }.join(', ') %>>;
 
+#if defined(METABENCH)
+using result = mpl::at_c<xs, <%= n - 1 %>>::type;
+#endif
 
 int main() { }
