--- a/benchmark/type/count_if/metal.list.cpp.erb
+++ b/benchmark/type/count_if/metal.list.cpp.erb
@@ -14,6 +14,8 @@ using list = metal::list<
     <%= (1..n).map { |i| "metal::integer<#{i}>" }.join(', ') %>
 >;
 
+#if defined(METABENCH)
 using result = metal::count_if_t<list, metal::lambda<is_even>>;
+#endif
 
 int main() { }
