--- a/benchmark/type/count_if/mpl.vector.cpp.erb
+++ b/benchmark/type/count_if/mpl.vector.cpp.erb
@@ -24,6 +24,8 @@ using vector = mpl::vector<
     <%= (1..n).map { |i| "std::integral_constant<int, #{i}>" }.join(', ') %>
 >;
 
+#if defined(METABENCH)
 using result = mpl::count_if<vector, mpl::quote1<is_even>>::type;
+#endif
 
 int main() { }
