--- a/benchmark/type/filter/meta.list.cpp.erb
+++ b/benchmark/type/filter/meta.list.cpp.erb
@@ -14,6 +14,8 @@ using list = meta::list<
     <%= (1..n).map { |i| "meta::int_<#{i}>" }.join(', ') %>
 >;
 
+#if defined(METABENCH)
 using result = meta::filter<list, is_even>;
+#endif
 
 int main() { }
