--- a/benchmark/type/find_if/meta.list.cpp.erb
+++ b/benchmark/type/find_if/meta.list.cpp.erb
@@ -14,6 +14,8 @@ using list = meta::list<
     <%= (1..n).map { |i| "meta::int_<#{i}>" }.join(', ') %>
 >;
 
+#if defined(METABENCH)
 using result = meta::find_if<list, is_last>;
+#endif
 
 int main() { }
