--- a/benchmark/type/find_if/mpl.list.cpp.erb
+++ b/benchmark/type/find_if/mpl.list.cpp.erb
@@ -25,7 +25,8 @@ using list = mpl::list<
     <%= (1..n).map { |i| "std::integral_constant<int, #{i}>" }.join(', ') %>
 >;
 
+#if defined(METABENCH)
 using result = mpl::find_if<list, is_last>::type;
-
+#endif
 
 int main() { }
