--- a/benchmark/type/fold_left/meta.list.cpp.erb
+++ b/benchmark/type/fold_left/meta.list.cpp.erb
@@ -19,6 +19,8 @@ using list = meta::list<
     <%= (1..n).map { |i| "x<#{i}>" }.join(', ') %>
 >;
 
+#if defined(METABENCH)
 using result = meta::fold<list, state, f>;
+#endif
 
 int main() { }
