--- a/benchmark/type/fold_left/mpl.list.cpp.erb
+++ b/benchmark/type/fold_left/mpl.list.cpp.erb
@@ -28,7 +28,9 @@ using list = mpl::list<
     <%= (1..n).map { |i| "x<#{i}>" }.join(', ') %>
 >;
 
+#if defined(METABENCH)
 using result = mpl::fold<list, state, f>::type;
+#endif
 
 
 int main() { }
