--- a/benchmark/type/fold_left/mpl.vector.cpp.erb
+++ b/benchmark/type/fold_left/mpl.vector.cpp.erb
@@ -28,7 +28,8 @@ using vector = mpl::vector<
     <%= (1..n).map { |i| "x<#{i}>" }.join(', ') %>
 >;
 
+#if defined(METABENCH)
 using result = mpl::fold<vector, state, f>::type;
-
+#endif
 
 int main() { }
