--- a/benchmark/type/fold_right/mpl.list.cpp.erb
+++ b/benchmark/type/fold_right/mpl.list.cpp.erb
@@ -26,7 +26,8 @@ using list = mpl::list<
     <%= (1..n).map { |i| "x<#{i}>" }.join(', ') %>
 >;
 
+#if defined(METABENCH)
 using result = mpl::reverse_fold<list, state, f>::type;
-
+#endif
 
 int main() { }
