--- a/benchmark/type/fold_right/mpl.vector.cpp.erb
+++ b/benchmark/type/fold_right/mpl.vector.cpp.erb
@@ -26,7 +26,8 @@ using vector = mpl::vector<
     <%= (1..n).map { |i| "x<#{i}>" }.join(', ') %>
 >;
 
+#if defined(METABENCH)
 using result = mpl::reverse_fold<vector, state, f>::type;
-
+#endif
 
 int main() { }
