--- a/benchmark/type/replace_if/meta.list.cpp.erb
+++ b/benchmark/type/replace_if/meta.list.cpp.erb
@@ -21,6 +21,8 @@ using xs = meta::list<
     <%= (1..n).map { |i| "x<#{i}>" }.join(', ') %>
 >;
 
+#if defined(METABENCH)
 using result = meta::replace_if<xs, is_odd, void>;
+#endif
 
 int main() { }
