--- a/benchmark/type/replace_if/metal.list.cpp.erb
+++ b/benchmark/type/replace_if/metal.list.cpp.erb
@@ -21,6 +21,8 @@ using xs = metal::list<
     <%= (1..n).map { |i| "x<#{i}>" }.join(', ') %>
 >;
 
+#if defined(METABENCH)
 using result = metal::replace_if_t<xs, metal::lambda<is_odd>, void>;
+#endif
 
 int main() { }
