--- a/benchmark/type/replace_if/mpl.list.cpp.erb
+++ b/benchmark/type/replace_if/mpl.list.cpp.erb
@@ -26,11 +26,10 @@ struct is_odd
     {};
 };
 
-typedef mpl::replace_if<
-    mpl::list<<%= (1..n).map { |i| "x<#{i}>" }.join(', ') %> >,
-    is_odd,
-    void
->::type result;
+using xs = mpl::list<<%= (1..n).map { |i| "x<#{i}>" }.join(', ') %>>;
 
+#if defined(METABENCH)
+using result = mpl::replace_if<xs, is_odd, void>::type;
+#endif
 
 int main() { }
