--- a/benchmark/type/reverse/mpl.list.cpp.erb
+++ b/benchmark/type/reverse/mpl.list.cpp.erb
@@ -14,9 +14,10 @@ namespace mpl = boost::mpl;
 
 template <int> struct x;
 
-typedef mpl::reverse<
-    mpl::list<<%= (1..n).map { |i| "x<#{i}>" }.join(', ') %> >
->::type result;
+using xs = mpl::list<<%= (1..n).map { |i| "x<#{i}>" }.join(', ') %>>;
 
+#if defined(METABENCH)
+using result = mpl::reverse<xs>::type;
+#endif
 
 int main() { }
