--- a/benchmark/type/transform/meta.list.cpp.erb
+++ b/benchmark/type/transform/meta.list.cpp.erb
@@ -16,6 +16,8 @@ using xs = meta::list<
     <%= (1..n).map { |i| "x<#{i}>" }.join(', ') %>
 >;
 
+#if defined(METABENCH)
 using result = meta::transform<xs, f>;
+#endif
 
 int main() { }
