--- a/benchmark/type/transform/metal.list.cpp.erb
+++ b/benchmark/type/transform/metal.list.cpp.erb
@@ -15,6 +15,8 @@ using xs = metal::list<
     <%= (1..n).map { |i| "x<#{i}>" }.join(', ') %>
 >;
 
+#if defined(METABENCH)
 using result = metal::transform_t<metal::lambda<f>, xs>;
+#endif
 
 int main() { }
