--- a/benchmark/type/transform/mpl.vector.cpp.erb
+++ b/benchmark/type/transform/mpl.vector.cpp.erb
@@ -18,10 +18,10 @@ struct f { typedef X type; };
 
 template <int> struct x;
 
-typedef mpl::transform<
-    mpl::vector<<%= (1..n).map { |i| "x<#{i}>" }.join(', ') %> >,
-    mpl::quote1<f>
->::type result;
+using xs = mpl::vector<<%= (1..n).map { |i| "x<#{i}>" }.join(', ') %>>;
 
+#if defined(METABENCH)
+using result = mpl::transform<xs, mpl::quote1<f>>::type;
+#endif
 
 int main() { }
