--- a/benchmark/hetero/at_key/deep/fusion.map.cpp.erb
+++ b/benchmark/hetero/at_key/deep/fusion.map.cpp.erb
@@ -2,24 +2,23 @@
 // Distributed under the Boost Software License, Version 1.0.
 // (See accompanying file LICENSE.md or copy at http://boost.org/LICENSE_1_0.txt)
 
-#include <boost/hana/integral_constant.hpp>
-
 #include <boost/fusion/include/at_key.hpp>
 #include <boost/fusion/include/make_map.hpp>
-namespace hana = boost::hana;
+#include <boost/mpl/int.hpp>
 namespace fusion = boost::fusion;
+namespace mpl = boost::mpl;
 
 
 struct undefined { };
 
 int main() {
     auto map = fusion::make_map<
-        <%= env[:range].map { |i| "hana::int_<#{i}>" }.join(', ') %>
+        <%= env[:range].map { |i| "mpl::int_<#{i}>" }.join(', ') %>
     >(
         <%= env[:range].map { |i| "undefined{}" }.join(', ') %>
     );
 
 #if defined(METABENCH)
-    auto result = fusion::at_key<hana::int_<<%= n %>>>(map);
+    auto result = fusion::at_key<mpl::int_<<%= n %>>>(map);
 #endif
 }
