--- a/benchmark/hetero/at_key/wide/fusion.map.cpp.erb
+++ b/benchmark/hetero/at_key/wide/fusion.map.cpp.erb
@@ -2,26 +2,25 @@
 // Distributed under the Boost Software License, Version 1.0.
 // (See accompanying file LICENSE.md or copy at http://boost.org/LICENSE_1_0.txt)
 
-#include <boost/hana/integral_constant.hpp>
-
 #include <boost/fusion/include/at_key.hpp>
 #include <boost/fusion/include/make_map.hpp>
+#include <boost/mpl/int.hpp>
 namespace fusion = boost::fusion;
-namespace hana = boost::hana;
+namespace mpl = boost::mpl;
 
 
 struct undefined { };
 
 int main() {
     auto map = fusion::make_map<<%=
-        env[:range].map { |i| "hana::int_<#{i}>" }.join(', ')
+        env[:range].map { |i| "mpl::int_<#{i}>" }.join(', ')
     %>>(<%=
         env[:range].map { |i| "undefined{}" }.join(', ')
     %>);
 
 #if defined(METABENCH)
     <% (0...n).each do |i| %>
-        fusion::at_key<hana::int_<<%= i %>>>(map);
+        fusion::at_key<mpl::int_<<%= i %>>>(map);
     <% end %>
 #endif
 }
