update Metal benchmarks
- make sure pure type benchmarks are up to date with the recent breaking changes
in Metal
- add a couple missing benchmarks for Metal

--- a/benchmark/type/fold_left/metal.list.cpp.erb
+++ b/benchmark/type/fold_left/metal.list.cpp.erb
@@ -2,27 +2,21 @@
 // Distributed under the Boost Software License, Version 1.0.
 // (See accompanying file LICENSE.md or copy at http://boost.org/LICENSE_1_0.txt)
 
-#include <metal/list/list.hpp>
-#include <metal/list/fold.hpp>
-#include <metal/lambda/lambda.hpp>
+#include <metal.hpp>
 
 template<typename, typename X>
-struct f
-{
-    using type = X;
-};
+using f = X;
 
-struct state { };
+struct state;
 
-template<int i>
-struct x { };
+template<int> struct x;
 
 using list = metal::list<
     <%= (1..n).map { |i| "x<#{i}>" }.join(', ') %>
 >;
 
 #if defined(METABENCH)
-using result = metal::fold_t<list, state, metal::lambda<f>>;
+using result = metal::fold<list, state, metal::lambda<f>>;
 #endif
 
 int main() { }
