--- a/benchmark/type/make/metal.list.cpp.erb
+++ b/benchmark/type/make/metal.list.cpp.erb
@@ -1,4 +1,4 @@
-// Copyright Louis Dionne 2016
+// Copyright Bruno Dutra 2016
 // Distributed under the Boost Software License, Version 1.0.
 // (See accompanying file LICENSE.md or copy at http://boost.org/LICENSE_1_0.txt)
 
@@ -6,12 +6,8 @@
 
 template<int> struct x;
 
-using list = metal::list<
-    <%= (1..n).map { |i| "x<#{i}>" }.join(', ') %>
->;
-
 #if defined(METABENCH)
-using result = metal::at<list, metal::int_<<%= n - 1 %>>>;
+using list = metal::list<<%= (1..n).map { |i| "x<#{i}>" }.join(', ') %>>;
 #endif
 
 int main() { }
