--- a/benchmark/type/count_if/metal.list.cpp.erb
+++ b/benchmark/type/count_if/metal.list.cpp.erb
@@ -2,20 +2,17 @@
 // Distributed under the Boost Software License, Version 1.0.
 // (See accompanying file LICENSE.md or copy at http://boost.org/LICENSE_1_0.txt)
 
-#include <metal/list/list.hpp>
-#include <metal/list/count_if.hpp>
-#include <metal/lambda/lambda.hpp>
-#include <metal/number/number.hpp>
+#include <metal.hpp>
 
 template<typename N>
-using is_even = metal::boolean<N::type::value % 2 == 0>;
+using is_even = metal::bool_<N::type::value % 2 == 0>;
 
 using list = metal::list<
-    <%= (1..n).map { |i| "metal::integer<#{i}>" }.join(', ') %>
+    <%= (1..n).map { |i| "metal::int_<#{i}>" }.join(', ') %>
 >;
 
 #if defined(METABENCH)
-using result = metal::count_if_t<list, metal::lambda<is_even>>;
+using result = metal::count_if<list, metal::lambda<is_even>>;
 #endif
 
 int main() { }
