--- a/benchmark/type/replace_if/metal.list.cpp.erb
+++ b/benchmark/type/replace_if/metal.list.cpp.erb
@@ -2,27 +2,17 @@
 // Distributed under the Boost Software License, Version 1.0.
 // (See accompanying file LICENSE.md or copy at http://boost.org/LICENSE_1_0.txt)
 
-#include <metal/list/list.hpp>
-#include <metal/list/replace_if.hpp>
-#include <metal/number/number.hpp>
-#include <metal/lambda/lambda.hpp>
+#include <metal.hpp>
 
-template <int> struct x;
+template<typename N>
+using is_even = metal::bool_<N::type::value % 2 == 0>;
 
-template<typename>
-struct is_odd;
-
-template<int i>
-struct is_odd<x<i>>
-    : metal::integer<i%2>
-{};
-
-using xs = metal::list<
-    <%= (1..n).map { |i| "x<#{i}>" }.join(', ') %>
+using list = metal::list<
+    <%= (1..n).map { |i| "metal::int_<#{i}>" }.join(', ') %>
 >;
 
 #if defined(METABENCH)
-using result = metal::replace_if_t<xs, metal::lambda<is_odd>, void>;
+using result = metal::replace_if<list, metal::lambda<is_even>, void>;
 #endif
 
 int main() { }
